--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "format:write": "prettier --write \".\"",
+    "format:check": "prettier --list-different \".\""
   },
   "eslintConfig": {
     "extends": [
@@ -44,5 +46,10 @@
     "husky": "5.1.3",
     "prettier": "2.2.1",
     "pretty-quick": "3.1.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
   }
 }
